# pandas-contract

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python.yml  release.yml  testing.yml
docs/: Makefile  conf.py  details.md  details.rst  development.md  index.md  index.rst  migration.md  module-mode.rst  page_index.md  public-api-check.rst  public-api.md  public-api.rst  setup.md  usage.md
src/: conftest.py
src/pandas_contract/: __init__.py  _checks.py  _decorator.py  _decorator_v1.py  _decorator_v2.py  _lib.py  _private_checks.py  checks.py  mode.py
src/tests/: test_checks.py  test_decorator.py  test_decorator_result.py  test_lib_get_argument.py  test_mode.py
src/tests/checks/: __init__.py  test_check_schema.py  test_extends.py  test_removed.py  test_same_index_as.py  test_same_length_as.py
src/tests/unit_tests/: __init__.py  conftest.py  test_checks.py  test_decorator.py  test_decorator_argument.py  test_decorator_result.py  test_decorator_v2.py  test_lib_get_argument.py  test_mode.py
src/tests/unit_tests/checks/: test_check_schema.py  test_extends.py  test_removed.py  test_same_index_as.py  test_same_length_as.py
